infra/homelab/apps/rustfs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rustfs
  namespace: rustfs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: rustfs-console.ininicho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9001
    - host: rustfs.ininicho.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rustfs-svc
                port:
                  number: 9000
